--- a/index.html
+++ b/index.html
@@ -1098,9 +1098,9 @@
 </body>
 <script>
     let datetxt = "23 - 10 - 2008";
-    let datatxtletter = "Nhân dịp 8/3 , xin gửi tất cả lời chúc tốt đẹp nhất tới Yến Nhi . Luôn luôn vui vẻ , mạnh khoẻ , luôn hạnh phúc và luôn may mắn trong cuộc sống , ngày càng xinh đẹp . Mong rằng cậu sẽ có được nhiều thành công trong học tập và thi cử nhé 💕💕";
+    let datatxtletter = "Huhu hôm nay 8/3 kko bít nói gì cả chỉ muón Lin lun dth như thế thoiii hihihihihihiihihihihihihihihi";
     let datatxtletter1 = "";
-    let titleLetter = "Nhân dịp ngày 8/3";
+    let titleLetter = "Happi Happi";
     let charArrDate = datetxt.split('');
     let charArrDateLetter = datatxtletter.split('');
     let charArrTitle = titleLetter.split('');
